[package]
name = "xgpu-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
crc32fast = "1.5.0"
linux-futex = "1.0.0"
nix = { version = "0.30.1", features = ["feature", "fs", "mman"] }
prost = "0.14.1"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zerocopy = { version = "0.8.27", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
walkdir = "2.5"
