[package]
name = "xgpu-proxy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
xgpu-common = { path = "../common" }
cudax = { path = "../cudax" }
libc = { version = "0.2" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
lazy_static = "1.4.0"
ctor = "0.2"
parking_lot = "0.12.4"
